--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,6 +1,4 @@
-Flask==1.1.1
-Flask-Sockets==0.2.1
-gevent==1.4.0
-gevent-websocket==0.10.1
-greenlet==0.4.15
-google-cloud-speech
+Flask==2.2.2
+Flask-SocketIO==5.3.0
+google-cloud-speech==2.8.1
+openai==0.27.0
