--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.2.2
+Flask==2.0.3
+Werkzeug==2.0.3
 Flask-SocketIO==5.3.0
 google-cloud-speech==2.31.0
-openai==1.2.3  # Ensure this is the latest version
-dotenv==0.9.9  # For environment variable management
+openai==1.2.3
+python-dotenv==0.19.0  # Changed from dotenv to python-dotenv
