--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.0.3
 Werkzeug==2.0.3
 Flask-SocketIO==5.3.0
+python-dotenv==0.19.0
 google-cloud-speech==2.31.0
 openai==1.2.3
-python-dotenv==0.19.0  # Changed from dotenv to python-dotenv
+eventlet==0.33.3
+six==1.16.0
