--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,8 +1,8 @@
 Flask==2.0.3
 Werkzeug==2.0.3
 Flask-SocketIO==5.3.0
-python-dotenv==0.19.0
 google-cloud-speech==2.31.0
-openai==1.2.3
+openai==0.28.0  # Downgrading OpenAI package to a stable version
+python-dotenv==1.0.0
 eventlet==0.33.3
-six==1.16.0
+httpx>=0.24.1
