--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,8 +1,8 @@
-Flask==2.0.3
-Werkzeug==2.0.3
+Flask==2.2.2
 Flask-SocketIO==5.3.0
 google-cloud-speech==2.31.0
-openai==0.28.0  # Downgrading OpenAI package to a stable version
+openai==1.2.3
 python-dotenv==1.0.0
+websockets==12.0
+pydub==0.25.1
 eventlet==0.33.3
-httpx>=0.24.1
