--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,8 +1,11 @@
-Flask==2.2.2
+Flask==2.0.3
+Werkzeug==2.0.3
 Flask-SocketIO==5.3.0
-google-cloud-speech==2.31.0
+python-engineio==4.3.4
+python-socketio==5.7.2
 openai==1.2.3
 python-dotenv==1.0.0
 websockets==12.0
 pydub==0.25.1
 eventlet==0.33.3
+llama-index==0.9.7
